Bug 462100 - KeySequenceItem in ListView, clears the shortcut of the previously set item when trying to set another one
Summary: KeySequenceItem in ListView, clears the shortcut of the previously set item w...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kdeclarative
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.100.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 459314 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-21 18:46 UTC by george fb
Modified: 2022-12-12 00:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bug showcase (84.83 KB, video/webm)
2022-11-21 18:46 UTC, george fb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description george fb 2022-11-21 18:46:11 UTC
Created attachment 153928 [details]
bug showcase

Sample app: https://gitlab.com/g-fb/keysequencetest

STEPS TO REPRODUCE
1. Build and run sample app
2. Set shortcut for one item
3. Set shortcut for another item

OBSERVED RESULT
Shortcut for the first set item is cleared

EXPECTED RESULT
Both items have shortcuts set

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20221119
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 6.0.8-1-default (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 2600 Six-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 750 Ti/PCIe/SSE2
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: X470 AORUS ULTRA GAMING
Comment 1 george fb 2022-11-21 18:47:44 UTC
Forgot to say that the behavior start with this commit: https://invent.kde.org/frameworks/kdeclarative/-/commit/1155f4c9712afe53b68c70fdfafa4a5bf55a1b9f
Comment 2 george fb 2022-11-25 06:58:47 UTC
Here's a bug from Haruna caused by the change https://bugs.kde.org/show_bug.cgi?id=462110

I did some more testing and the problem is the fact that `keySequence` is an alias, if I change it back to var the problem goes away https://invent.kde.org/frameworks/kdeclarative/-/blob/f5d8e304a2c780312c5375ee20b54923b020b3a1/src/qmlcontrols/kquickcontrols/KeySequenceItem.qml#L15
Comment 3 Bug Janitor Service 2022-11-29 18:38:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kguiaddons/-/merge_requests/78
Comment 4 Aleix Pol 2022-12-01 13:57:57 UTC
Git commit 4cea8a179c9c3da09145a6eecee343473410a85f by Aleix Pol.
Committed on 30/11/2022 at 00:34.
Pushed by apol into branch 'master'.

KeySequenceRecorder: Stop tracking recordings when we stop recording

Otherwise we cancel this instance when another instance starts
recording, which tampers with the state incorrectly.

M  +2    -2    autotests/keysequencerecordertest.cpp
M  +2    -0    src/recorder/keysequencerecorder.cpp

https://invent.kde.org/frameworks/kguiaddons/commit/4cea8a179c9c3da09145a6eecee343473410a85f
Comment 5 Patrick Silva 2022-12-12 00:05:17 UTC
*** Bug 459314 has been marked as a duplicate of this bug. ***