KeySequenceRecorder: Stop tracking recordings when we stop recording

Otherwise we cancel this instance when another instance starts
recording, which tampers with the state incorrectly.

BUG: 462100